welcome.lessons.welcome.bat.bool2.GreenTicket.scala.error
greenTicket:2: error: a is already defined as value a
  																							case (_,a,a) => return 20
                                                                                                                                                                                                  ^greenTicket:6: error: missing parameter type
  (_,_,_) => 0}
   ^greenTicket:6: error: missing parameter type
  (_,_,_) => 0}
     ^greenTicket:6: error: missing parameter type
  (_,_,_) => 0}
       ^